--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "ejs": "^3.1.6",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "formidable": "^2.0.1",
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "mongoose": "^6.5.2",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "sequelize": "^6.19.0",
     "sqlite3": "^5.0.8"
   },
