--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "description": "Hack Academy - Ejemplo de MVC y Sequelize",
   "devDependencies": {
-    "@faker-js/faker": "^6.3.1"
+    "@faker-js/faker": "^6.3.1",
+    "nodemon": "^2.0.19"
   }
 }
