--- a/package.json
+++ b/package.json
@@ -10,33 +10,16 @@
   "author": "Hack Academy",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.5",
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.2.0",
     "cors": "^2.8.5",
-    "date-fns": "^2.28.0",
     "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
     "express": "^4.18.1",
     "express-jwt": "^7.7.5",
-    "express-session": "^1.17.3",
     "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "method-override": "^3.0.0",
     "mongoose": "^6.5.2",
-    "mysql2": "^2.3.3",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
-    "sequelize": "^6.19.0",
-    "sqlite3": "^5.0.8"
+    "path": "^0.12.7"
   },
   "description": "Hack Academy - Ejemplo de MVC y Sequelize",
   "devDependencies": {
